syntax = "proto3";
package wire;

message OpeningTx {
  string channel_id = 1;
  repeated bytes pubkeys = 2;
  bytes state = 3;
  uint32 hold_period = 4;
}

message UpdateTx {
  string channel_id = 1;
  uint32 sequence_number = 2;
  bool fast = 3;
  bytes state = 4;
}

message Fulfillment {
  string channel_id = 1;
  bytes state = 2;
}

message Envelope {
  enum Type {
    OpeningTx = 0;
    OpeningTxProposal = 1;
    UpdateTx = 2;
    UpdateTxProposal = 3;
    Fulfillment = 4;
  }

  Type type = 1;
  bytes payload = 2;
  repeated bytes signatures = 3;
}
